--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                               </div>
                            </div>
                            <div>
-                              <button class="btn" style="margin:20px;"><a target="_blank" href="http://docdro.id/iwAanTs">RESUME</a></button>
+                              <button class="btn" style="margin:20px;"><a target="_blank" href="https://www.docdroid.net/2YCi0LT/sagarvadher.pdf">RESUME</a></button>
                            </div>
                         </div>
                      </div>
