--- a/index.html
+++ b/index.html
@@ -347,12 +347,21 @@
                         <div class="col-lg-8 col-md-10">
                            <div class="resume-inner">
                               <div class="resume-row">
-                                 <span class="resume-date">JUL 2013 - JUN 2014</span>
-                                 <h4 class="resume-study">Intern <br /> Eidolon Cyber Studio, Ahmedabad, India</h4>
-                                 <p class="resume-text">• Effectively used various object-oriented program concepts while development of the web applications.<br />
-                                    • Migrated data from MY SQL to. MongoDB.<br />
-                                    • Used HTML5, CSS3, JavaScript, JQuery, XHTML and twitter bootstrap for developing interactive and
-                                    responsive web applications.
+                                 <span class="resume-date">NOV 2018 - Current</span>
+                                 <h4 class="resume-study">Software Developer <br /> PepsiCo, Inc, Plano, TX</h4>
+                                 <p class="resume-text">• Analyzed GE Plant Application time series data and developed predictive maintenance model using Clustering with for detecting packaging tubes for breakdown and its maintenance on its earlier stage.<br /> 
+                                    • Designed, developed and tested web applications using C#, ASP.Net, JavaScript, jQuery to monitor different severs health and create interactive charts and visualizations and send Email and SMS alerts to user for custom conditions.<br /> 
+                                    • Created and optimized existing ETL pipeline from heterogenous sources such as directly from PLC and REST API and dump to centralized SQL Database and various applications and deployed it on Azure pipeline for CI/CD.<br /> 
+                                    • Create multiple database schema and stored procedures to feed into different applications and create reports and sub reports in SSRS.<br /> 
+                                 </p>
+                              </div>
+                              </div>
+                                 <div class="resume-row">
+                                 <span class="resume-date">MAR 2018 - NOV 2018</span>
+                                 <h4 class="resume-study">Software Developer <br /> Dash Technologies, Columbus OH</h4>
+                                 <p class="resume-text">• Developed Windows Service Application using C# .NET for extracting texts from log files, clean, analyze and store into SQL database.</br>
+                                    • Created various stored procedures using PL/SQL in Microsoft SQL Server 2012 for data retrieval.</br>
+                                    • Created SSRS Re orts, drill down reports and graphs with Visual Studio Report Designer.  
                                  </p>
                               </div>
                               <div class="resume-row">
@@ -365,7 +374,15 @@
                                     • Implemented usage of Gzip to compress the JavaScript according to their container respectively.
                                  </p>
                               </div>
-                           </div>
+                              <div class="resume-row">
+                                 <span class="resume-date">JUL 2013 - JUN 2014</span>
+                                 <h4 class="resume-study">Intern <br /> Eidolon Cyber Studio, Ahmedabad, India</h4>
+                                 <p class="resume-text">• Effectively used various object-oriented program concepts while development of the web applications.<br />
+                                    • Migrated data from MY SQL to. MongoDB.<br />
+                                    • Used HTML5, CSS3, JavaScript, JQuery, XHTML and twitter bootstrap for developing interactive and
+                                    responsive web applications.
+                                 </p>
+                              </div>
                            <div>
                               <button class="btn" style="margin:20px;"><a target="_blank" href="https://www.docdroid.net/2YCi0LT/sagarvadher.pdf">RESUME</a></button>
                            </div>
