--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
       <meta charset="UTF-8">
       <title>Sagar Vadher</title>
       <!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115569115-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-115569115-1');
-	</script>
-
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115569115-1"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         
+         gtag('config', 'UA-115569115-1');
+      </script>
       <meta name="description" content="">
       <meta name="author" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -355,13 +354,12 @@
                                     • Create multiple database schema and stored procedures to feed into different applications and create reports and sub reports in SSRS.<br /> 
                                  </p>
                               </div>
-                              </div>
-                                 <div class="resume-row">
+                              <div class="resume-row">
                                  <span class="resume-date">MAR 2018 - NOV 2018</span>
                                  <h4 class="resume-study">Software Developer <br /> Dash Technologies, Columbus OH</h4>
-                                 <p class="resume-text">• Developed Windows Service Application using C# .NET for extracting texts from log files, clean, analyze and store into SQL database.</br>
-                                    • Created various stored procedures using PL/SQL in Microsoft SQL Server 2012 for data retrieval.</br>
-                                    • Created SSRS Re orts, drill down reports and graphs with Visual Studio Report Designer.  
+                                 <p class="resume-text">• Developed Windows Service Application using C# .NET for extracting texts from log files, clean, analyze and store into SQL database.<br /> 
+                                    • Created various stored procedures using PL/SQL in Microsoft SQL Server 2012 for data retrieval.<br /> 
+                                    • Created SSRS Re orts, drill down reports and graphs with Visual Studio Report Designer.<br />  
                                  </p>
                               </div>
                               <div class="resume-row">
@@ -383,8 +381,9 @@
                                     responsive web applications.
                                  </p>
                               </div>
-                           <div>
-                              <button class="btn" style="margin:20px;"><a target="_blank" href="https://www.docdroid.net/2YCi0LT/sagarvadher.pdf">RESUME</a></button>
+                              <div>
+                              </div>
+                              <button class="btn" style="margin:20px;"><a target="_blank" href="https://docdro.id/xYn3tm4">RESUME</a></button>
                            </div>
                         </div>
                      </div>
